# openscad-mcp

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  LICENSE  README.md  claude_desktop_config.json  pyproject.toml  run.sh
.claude/: launch.json  settings.local.json
data/: 50_to_100_transition_pipe.scad  90deg_bent_pipe_30mm.scad  agent_zippo_lighter.scad  agent_zippo_lighter_v2.scad  agent_zippo_lighter_v3.scad  circle_to_ellipse_transition_pipe.scad  simple_car_basic.scad  simple_game_controller.scad  simple_laptop.scad  simple_suv.scad  simple_truck_basic.scad  simple_zippo_lighter.scad
src/openscad_mcp/: __init__.py  design_agent.py  renderer.py  server.py  web_api.py
tests/: test_server.py
web/: index.html  package-lock.json  package.json  vite.config.js
web/src/: App.css  App.jsx  StlViewer.jsx  index.css
web/src/api/: openscad.js
web/src/hooks/: useFileWatcher.js
