[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openscad-mcp"
version = "0.1.0"
description = "MCP server for OpenSCAD 3D modeling and rendering"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "sjrhee", email = "sjrhee0108@gmail.com" }
]
keywords = ["mcp", "openscad", "3d", "cad", "modeling"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp>=1.0.0",
    "fastmcp>=0.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[project.scripts]
openscad-mcp = "openscad_mcp.server:main"

[project.urls]
Homepage = "https://github.com/sjrhee/openscad-mcp"
Repository = "https://github.com/sjrhee/openscad-mcp"
Issues = "https://github.com/sjrhee/openscad-mcp/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/openscad_mcp"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.10"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
